# EasySlither

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
exercise/: 1.cpp  1.h  2.cpp  2.h  3.cpp  3.h  4.cpp  4.h
src/: Menu.cppm  Screen.cppm  ThirdParty.cppm  client.cpp  main.cpp  server.cpp  shapes.cpp  shapes.h  utils.cpp  utils.h
src/Game/: Config.cppm  Food.cppm  GameConfig.cppm  GameInterface.cppm  GameType.cppm  Interface.cppm  Prey.cppm  Sector.cppm  Snake.cppm  World.cppm
src/Internal/: GameServer.cppm  GameStore.cppm  ScreenMediator.cppm  UserInput.cppm
src/Menu/: Menu.cppm  MenuInterface.cppm  MenuItem.cppm  TextInput.cppm
src/Middleware/: ScreenMediator.cppm  UserInput.cppm
src/Network/: Connection.cppm  ConnectionEnd.cppm  ConnectionType.cppm  ITCQueue.cppm
src/Screen/: GameOverScreen.cppm  GameScreen.cppm  Interface.cppm  LoadingScreen.cppm  MainScreen.cppm  RankScreen.cppm  ScaleFactor.cppm  Screen.cppm  ScreenInterface.cppm  ScreenName.cppm  UsernameInput.cppm
src/Utils/: Angle.cppm  BoundBox.cppm  Colors.cppm  Drawable.cppm  Filesystem.cppm  Frames.cppm  InputBox.cppm  Mediator.cppm  Names.cppm  Observer.cppm  Random.cppm  TextEncode.cppm  Throttle.cppm  Time.cppm
